--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,211 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
+title: 'Reproducible Research: Peer Assessment 1'
+output:
   html_document:
-    keep_md: true
+    keep_md: yes
+  pdf_document: default
+editor_options: 
+  chunk_output_type: console
 ---
+
+```{r, results="hide"}
+library(dplyr)
+library(lattice)
+```
 
 
 ## Loading and preprocessing the data
 
+```{r, echo=TRUE}
 
+# download zip file
+# to force a download uncomment the if statement below
+
+datasource <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+if (!file.exists("activity.zip")) 
+{
+	download.file(datasource, destfile = "activity.zip", method = "curl")
+}
+
+# unzip the data
+
+datafile <- "activity.csv"
+if (!file.exists(datafile)) 
+{
+	unzip("activity.zip")
+}
+
+# load data
+
+activity <- read.csv(datafile, header = TRUE)
+#nrow(activity)
+head(activity)
+summary(activity)
+```
 
 ## What is mean total number of steps taken per day?
 
+1. Calculate the total number of steps taken per day
+2. Make a histogram of the total number of steps taken each day
+3. Calculate and report the mean and median of the total number of steps taken per day
 
+```{r, echo=TRUE}
+
+total_steps_per_day <- activity %>% 
+                       group_by(date) %>% 
+                       summarize(total_steps = sum(steps, na.rm = TRUE))
+
+hist(total_steps_per_day$total_steps,
+     main="Histogram: Total Steps per Day",
+     xlab="Total Steps per Day",
+     ylab="Frequency",
+     col="blue")
+
+mean_total_steps <- mean(total_steps_per_day$total_steps)
+median_total_steps <- median(total_steps_per_day$total_steps)
+```
+
+==> Median number of steps taken each day: `r median_total_steps`.  
+==> Mean number of steps taken each day: `r mean_total_steps`.  
+  
 
 ## What is the average daily activity pattern?
 
+1. Make a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
+```{r, echo=TRUE}
+
+daily_pattern <- activity %>% 
+                 group_by(interval) %>% 
+                 summarize(average_steps = mean(steps, na.rm = TRUE))
+
+daily_pattern
+#daily_pattern$average_steps
+
+plot(daily_pattern, 
+     type = "l", 
+     main = "Average Daily Activity Pattern",
+     col = "blue")
+
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r, echo=TRUE}
+
+max_index <- which.max(daily_pattern$average_steps)
+#max_index
+#daily_pattern[max_index,1]
+
+```
+
+==> The maximum average number of steps occur at interval index `r max_index` (`r daily_pattern[max_index,1]`)  
+  
 
 ## Imputing missing values
 
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs):
+```{r, excho=TRUE}
+
+# calculate total number of missing values in the dataset
+
+total_missing_values <- sum(is.na(activity))
+total_missing_values
+```
+==> The total number of missing values in the dataset is `r total_missing_values`.  
+  
+2. Devise a strategy for filling in all of the missing values in the dataset.
+
+==> The missing values will be filled in with the (rounded) mean for the 5-minute interval
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
+
+```{r, echo=TRUE}
+
+# create a new dataset equal to the original
+
+activity.imputed <- activity
+
+# run through, substituting all NA values with the mean
+
+for (i in 1:nrow(activity.imputed)) 
+{
+    if (is.na(activity.imputed$steps[i]))
+    {
+       avg_steps <- daily_pattern[daily_pattern$interval == activity.imputed$interval[i],"average_steps"]
+       activity.imputed$steps[i] <- as.integer(round(avg_steps))  
+    }
+}
+
+# debug lines
+# head(activity.imputed,20)
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day.
+
+```{r, echo=TRUE}
+
+imputed_steps_per_day <- activity.imputed %>% 
+                         group_by(date) %>% 
+                         summarize(imputed_steps = sum(steps, na.rm = TRUE))
+
+hist(imputed_steps_per_day$imputed_steps,
+     main="Histogram: Imputed Steps per Day",
+     xlab="Imputed Steps per Day",
+     ylab="Frequency",
+     col="blue")
+
+mean_imputed_steps <- mean(imputed_steps_per_day$imputed_steps)
+median_imputed_steps <- median(imputed_steps_per_day$imputed_steps)
+
+```
+
+==> (Imputed) Median number of steps taken each day: `r median_imputed_steps`.  
+==> (Imputed) Mean number of steps taken each day: `r as.integer(mean_imputed_steps)`. 
+
+#### Observations
+==> Imputing missing data with average values will have a normalising effect on the histogram.  
+==> Imputing missing data with average values also brings the mean and median much closer to each other.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+
+```{r, echo=TRUE}
+
+# add qualifyers to imputed dataset indicating week or weekend days
+
+activity.imputed <- mutate(activity.imputed, day = weekdays(as.Date(date)))
+activity.imputed <- mutate(activity.imputed, daytype = as.factor(ifelse(day == "Saturday" | day == "Sunday", "Weekend", "Weekday")))
+head(activity.imputed)
+
+# create daily pattern to include weekend qualifier as key
+
+daily_pattern_by_daytype <- activity.imputed %>% 
+                 group_by(daytype,interval) %>% 
+                 summarize(average_steps = mean(steps))
+head(daily_pattern_by_daytype)
+```
+
+2. Make a panel plot containing a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
+
+```{r, echo=TRUE}
+
+# plot the data split by weekend and weekday graphs
+
+xyplot(average_steps ~ interval | daytype, 
+       data = daily_pattern_by_daytype, 
+       layout = c(1,2), 
+       type = "l",
+	    main = "Average Steps by 5-minute Interval for Weekend vs Weekdays",
+	    xlab = "Interval",
+	    ylab = "Average Steps",
+	    col = "blue")
+```
+
+#### Observation
+
+==> Weekdays seems to have a higher activity level early in the morning, whereafter it flattens out.  
+==> Weekends have a higher activity level throughout the rest of the day  
+
